tests/NormalTests/paczka2/big_fuzzy/35988618.err
Error in line 4: xYAhBhyn26d S139 1,9
Error in line 5: xYAhBhyn26d S220 8,3
Error in line 10: xYAhBhyn26d >220 21,7
Error in line 8: QTmphPg S737 28,9
Error in line 9: bieycL7 S139 69,4
Error in line 21: bieycL7 S220 46,4
Error in line 16: OS2 S220 52,5
Error in line 31: OS2 S737 72,0
Error in line 7: xYAhBhyn26d S737 51,9
Error in line 34: OS2 S220 91,5
Error in line 37: A202 A202 48,5
Error in line 28: bieycL7 S220 63,2
Error in line 42: OS2 S139 40,3
Error in line 43: A202 S139 51,7
Error in line 54: lCC S737 23,4
Error in line 67: xYAhBhyn26d S220 44,4
Error in line 70: A202 A202 83,3
Error in line 66: QTmphPg S220 70,2
Error in line 61: bieycL7 S220 295,7
Error in line 78: A202 S139 -1,6
Error in line 74: QTmphPg A202 60,6
Error in line 86: bieycL7 S737 25,0
Error in line 89: bieycL7 S220 8,4
Error in line 92: bieycL7 A202 89,1
Error in line 85: QTmphPg S737 70,4
Error in line 104: OS2 S139 20,3
Error in line 121: OS2 S220 89,
Error in line 122: A202 A202 -5,9
Error in line 118: LYVekeHG A202 95,1
Error in line 128: LYVekeHG S737 82,4
Error in line 116: A202 A202 681,8
Error in line 120: lCC A202 5,1
Error in line 126: bieycL7 A202 29,7
Error in line 151: OS2 S220 48,4
Error in line 158: bieycL7 S220 85,3
Error in line 153: lCC S737 54,8
Error in line 163: A202 A202 77,9
Error in line 159: bieycL7 S139 86,2
Error in line 169: LYVekeHG S139 19,65
Error in line 129: LYVekeHG S220 28,9
Error in line 165: A202 S737 75,4
Error in line 164: lCC S139 9,0
Error in line 136: QTmphPg A202 10,1
Error in line 180: bieycL7 S220 56,2
Error in line 182: OS2 S220 44,8
Error in line 194: lCC A202 17,0
Error in line 199: lCC S737 34,8
Error in line 212: bieycL7 S220 89,5
Error in line 209: lCC A202 80,5
Error in line 216: lCC S139 6,7
Error in line 219: lCC S737 29,0
Error in line 220: lCC S139 99,4
Error in line 210: LYVekeHG A202 48,1
Error in line 223: LYVekeHG S737 44,0
Error in line 218: A202 S737 400,6
Error in line 241: bieycL7 S139 46,4
